--- a/shop.html
+++ b/shop.html
@@ -22,6 +22,7 @@
             <p style="margin: 0">Header</p>
         </div>
         
+        <!-- Shop Page -->
         <div id="shop-outer" class="container-fluid">
             <div class="row">
                 <div class="col my-auto">
@@ -42,6 +43,18 @@
         <!-- Placeholder Header -->
         <div style="width: 100%; background-color: #ffc8c8; text-align: center; padding: 37px 0">
             <p style="margin: 0">Footer</p>
+        </div>
+        
+        <!-- Scripts -->
+        <div>
+            <!-- jQuery -->
+            <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
+            <!-- Popper -->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+
+            <!-- Bootstrap -->
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         </div>
     </body>
 </html>
