Added text, selected primary and secondary fonts, created colored background animation

--- a/stories.html
+++ b/stories.html
@@ -26,7 +26,7 @@
         <div id="stories-outer" class="container-fluid">
             <!-- Intro Section -->
             <div id="stories-intro" class="row">
-                <p class="text-main">Main text</p>
+                <p class="text-main">share your story</p>
                 <p class="text-sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla rhoncus ligula sed nisi scelerisque lacinia. Sed auctor ultrices sem sed egestas. Phasellus blandit, urna eu tristique vehicula, nibh risus porta massa, a iaculis libero sapien ut leo.</p>
             </div>
 
