--- a/shop.html
+++ b/shop.html
@@ -27,14 +27,12 @@
             <div class="row">
                 <div class="col my-auto">
                     <div class="shop-text">
-                        <p class="text-main">Main text</p>
-                        <p class="text-sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p class="text-main">drinks</p>
                     </div>
                 </div>
                 <div class="col my-auto">
                     <div class="shop-text">
-                        <p class="text-main">Main text</p>
-                        <p class="text-sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p class="text-main">apparel</p>
                     </div>
                 </div>
             </div>
