Mobile responsiveness for Home, Shop, About, Stories, and Contact pages

--- a/shop.html
+++ b/shop.html
@@ -25,12 +25,12 @@
         <!-- Shop Page -->
         <div id="shop-outer" class="container-fluid">
             <div class="row">
-                <div class="col my-auto">
+                <div id="drinks-container" class="col-md-6 my-auto">
                     <div class="shop-text">
                         <p class="text-main">drinks</p>
                     </div>
                 </div>
-                <div class="col my-auto">
+                <div id="apparel-container" class="col-md-6 my-auto">
                     <div class="shop-text">
                         <p class="text-main">apparel</p>
                     </div>
