--- a/stories.html
+++ b/stories.html
@@ -39,31 +39,31 @@
             <!-- Gallery Section -->
             <div id="stories-gallery">
                 <div class="row">
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-4 col-6">
                         <img src="https://via.placeholder.com/1200x1600?text=3+:+4">
                     </div>
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-4 col-6">
                         <img src="https://via.placeholder.com/1200x1600?text=3+:+4">
                     </div>
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-4 col-6">
                         <img src="https://via.placeholder.com/1200x1600?text=3+:+4">
                     </div>
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-4 col-6">
                         <img src="https://via.placeholder.com/1200x1600?text=3+:+4">
                     </div>
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-4 col-6">
                         <img src="https://via.placeholder.com/1200x1600?text=3+:+4">
                     </div>
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-4 col-6">
                         <img src="https://via.placeholder.com/1200x1600?text=3+:+4">
                     </div>
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-4 col-6">
                         <img src="https://via.placeholder.com/1200x1600?text=3+:+4">
                     </div>
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-4 col-6">
                         <img src="https://via.placeholder.com/1200x1600?text=3+:+4">
                     </div>
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-4 col-6">
                         <img src="https://via.placeholder.com/1200x1600?text=3+:+4">
                     </div>
                 </div>
