Updated text on Home, About, and Stories pages

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
                 <!-- Text -->
                 <div id="about-story-text-container" class="col-12 col-md-7 my-auto">
                     <p class="text-main">our story</p>
-                    <p class="text-sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eu nibh velit. Nunc vel dolor ultricies, molestie ante ac, suscipit erat. Curabitur lacus lorem, sagittis id sapien nec, fringilla blandit lectus. Nulla tristique tortor auctor, venenatis elit tempus, lobortis erat. Praesent dapibus ligula vel neque egestas fringilla. Ut tincidunt enim ante, at ornare dolor dignissim ac.</p>
+                    <p class="text-sub">long lost friends, our divergent paths crossed serendipitously on a painted desert night. old memories were shared, a new bond was forged, and a simple idea was born: that we can all be better.</p>
                 </div>
             </div>
             
