--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <!-- Text -->
                     <div id="intro-text-col" class="col my-auto">
                         <p class="text-main">be mindful beverages</p>
-                        <p class="text-sub">We believe that an honest product doesn't have anything to hide. our ingredients are naturally sourced and our flavors are genuine.</p>
+                        <p class="text-sub">we believe that an honest product doesn't have anything to hide. our ingredients are naturally sourced, and our flavors are genuine.</p>
                         <a class="btn btn-outline-secondary">Shop Now</a>
                     </div>
                     
@@ -112,7 +112,7 @@
                     <div id="about-text-col" class="col-sm-6 my-auto">
                         <!-- two -->
                         <p id="about-title" class="text-main">honey ginger lemonade</p>
-                        <p class="text-sub">infused with the natural energy of green tea, our honey ginger lemonade's blend of sweet citrus and bitter ginger will quench your thrist and rejuvenate your body.  </p>
+                        <p class="text-sub">infused with the natural energy of green tea, our honey ginger lemonade's blend of sweet citrus and bitter ginger will quench your thirst and rejuvenate your body.</p>
                         <div id="about-icons" class="row">
                             <div class="col text-sub">
                                 <i class="fas fa-lemon"></i>
@@ -147,7 +147,7 @@
                 <div class="row">
                     <div class="col">
                         <p id="share-title" class="text-main">share your story</p>
-                        <p id="share-subtext" class="text-sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla rhoncus ligula sed nisi scelerisque lacinia. Sed auctor ultrices sem sed egestas. Phasellus blandit, urna eu tristique vehicula, nibh risus porta massa, a iaculis libero sapien ut leo. Quisque elit est, elementum at est at, tristique hendrerit eros. Nullam auctor nibh ut odio varius placerat.</p>
+                        <p id="share-subtext" class="text-sub">we believe in a culture of mindfulness. our story started by coincidence, but continues with purpose. tell us how you have helped improve your life, the lives of others, or how you think a company or an industry can be more conscientious of their impact on the world. through mindfulness, we can all be better.</p>
                         <div id="share-image-container">
                             <img src="https://via.placeholder.com/1200x1600?text=3+:+4">
                             <img src="https://via.placeholder.com/1200x1600?text=3+:+4">
