--- a/stories.html
+++ b/stories.html
@@ -30,12 +30,12 @@
             <!-- Intro Section -->
             <div id="stories-intro" class="row">
                 <p class="text-main">share your story</p>
-                <p class="text-sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla rhoncus ligula sed nisi scelerisque lacinia. Sed auctor ultrices sem sed egestas. Phasellus blandit, urna eu tristique vehicula, nibh risus porta massa, a iaculis libero sapien ut leo.</p>
+                <p class="text-sub">we believe in a culture of mindfulness. our story started by coincidence, but continues with purpose. tell us how you have helped improve your life, the lives of others, or how you think a company or an industry can be more conscientious of their impact on the world. through mindfulness, we can all be better.</p>
             </div>
 
             <!-- Share Section -->
             <div id="stories-share" class="row">
-                <p class="text-sub">sub text sub text sub text</p>
+                <p class="text-sub">share your story with the world</p>
                 <p><a href="" class="btn btn-primary">Share</a></p>
             </div>
 
