Replaced can mockup image on Home page

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="row">
                     <!-- Image -->
                     <div id="about-image-col" class="col-sm-6 my-auto">
-                        <img id="about-img" src="can.png">
+                        <img id="about-img" src="bmb_mockup_lemonade_temp.png">
                         <!-- one -->
                     </div>
                     
