Modified text on Home and About pages

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                 <!-- Text -->
                 <div id="about-mission-text-container" class="col-12 col-md-7 order-md-1 order-2 my-auto">
                     <p class="text-main">our mission</p>
-                    <p class="text-sub">for us, values like sustainability, responsibility, and mindfulness aren't just good business practices. They're representative of the lifestyle our team aims to promote. Our ultimate goal is to invent better, more responsible options for consumers in a wide variety of industries.  </p>
+                    <p class="text-sub">for us, values like sustainability, responsibility, interconnectedness, and mindfulness aren’t just good business practices. they’re values of a lifestyle that we believe in and strive to embody in all that we do. at be mindful, our vision is to build a better, more sustainable future through a variety of mindful endeavors and actions.</p>
                 </div>
                 
                 <!-- Image -->
