Updated team position titles

--- a/about.html
+++ b/about.html
@@ -84,12 +84,12 @@
                         <div>
                             <img src="https://via.placeholder.com/1200x1600?text=3+:+4">
                             <span class="text-main">Connor Holmes</span>
-                            <span class="text-sub">Chief of Design Technology</span>
+                            <span class="text-sub">Chief Design Officer</span>
                         </div>
                         <div>
                             <img src="https://via.placeholder.com/1200x1600?text=3+:+4">
                             <span class="text-main">Matt Bierman</span>
-                            <span class="text-sub">Chief of Information Technology</span>
+                            <span class="text-sub">CIO</span>
                         </div>
                     </div>
                     
