--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="robots" content="noindex,nofollow" />
         
         <!-- Favicons -->
         <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
