--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>be mindful beverages</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="robots" content="noindex,nofollow" />
     </head>
     <body>
         <div id="navbar"></div>
