--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         
         <!-- CSS -->
-        <link rel="stylesheet" href="common.css">
-        <link rel="stylesheet" href="about.css">
+        <link rel="stylesheet" href="css/common.css">
+        <link rel="stylesheet" href="css/about.css">
     </head>
     <body>
         <div id="navbar"></div>
