(work in progress)

--- a/index.html
+++ b/index.html
@@ -15,11 +15,28 @@
     </head>
     <body>
         <div id="navbar"></div>
-        <div id="jumbotron"></div>
+        <div id="jumbotron">
+            <div class="description"></div>
+        </div>
         <div class="section-banner"></div>
         <div id="latest-flavors"></div>
         <div class="section-banner"></div>
-        <div class="right-info"></div>
+        <div class="right-info">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <img src="images/test-d.jpeg">
+                    </div>
+                    <div class="col">
+                        <div class="info">
+                            <div class="title">energized by green tea.<br />powered by purpose.</div>
+                            <div class="description">non-gmo ingredients combined with striking natural flavors make for a quality product we can stand behind 100%.</div>
+                        </div>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+            </div>
+        </div>
         <div class="section-banner"></div>
         <div id="merch"></div>
         <div class="section-banner"></div>
