[M3] Design Jumbotron section for Home page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,22 @@
     </head>
     <body>
         <div id="navbar"></div>
-        <div id="jumbotron"></div>
+        <div id="jumbotron" class="bg-color-primary">
+            <div class="container">
+                <div class="left">
+                    <div class="title text-color-white">
+                        low sugar.
+                        <br />
+                        high energy.
+                        <br />
+                        all natural.
+                    </div>
+                </div>
+                <div class="right">
+                    <img src="images/two-cans.png">
+                </div>
+            </div>
+        </div>
         <div class="section-banner"></div>
         <div id="latest-flavors"></div>
         <div class="section-banner"></div>
