--- a/index.html
+++ b/index.html
@@ -36,7 +36,18 @@
         <div class="section-banner"></div>
         <div class="right-info"></div>
         <div class="section-banner"></div>
-        <div id="merch"></div>
+        <div id="merch" class="bg-color-white">
+            <div class="container">
+                <div>
+                    <div class="title text-color-primary">represent the mindful mindset.</div>
+                    <a href="" class="button">
+                        <span>shop merch</span>
+                    </a>
+                    <div style="clear: both"></div>
+                </div>
+                <div style="clear: both"></div>
+            </div>
+        </div>
         <div class="section-banner"></div>
         <div id="photo-highlights" class="container-fluid">
             <div class="row">
