--- a/about.html
+++ b/about.html
@@ -16,10 +16,52 @@
     <body>
         <div id="navbar"></div>
         <div id="jumbotron"></div>
-        <div class="right-info"></div>
-        <div class="left-info"></div>
-        <div class="right-info"></div>
-        <div class="left-info"></div>
+        <div class="info right bg-color-primary text-color-primary">
+            <div class="container">
+                <div class="content">
+                    <div class="bg-color-white">
+                        <div class="subtitle">our story.</div>
+                        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue nisl sed suscipit suscipit. Aliquam erat volutpat. Integer ullamcorper vehicula sapien, ac laoreet nisl tincidunt at. Duis volutpat nibh sem, nec mollis nunc imperdiet vel.</div>
+                    </div>
+                </div>
+                <img src="images/test-d.jpeg">
+            </div>
+        </div>
+        <div class="info left bg-color-white text-color-white">
+            <div class="container">
+                <div class="content">
+                    <div class="bg-color-primary">
+                        <div class="subtitle">our mission.</div>
+                        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue nisl sed suscipit suscipit. Aliquam erat volutpat. Integer ullamcorper vehicula sapien, ac laoreet nisl tincidunt at. Duis volutpat nibh sem, nec mollis nunc imperdiet vel.</div>
+                    </div>
+                </div>
+                <img src="images/test-d.jpeg">
+                <div style="clear: both"></div>
+            </div>
+        </div>
+        <div class="info right bg-color-primary text-color-primary">
+            <div class="container">
+                <div class="content">
+                    <div class="bg-color-white">
+                        <div class="subtitle">???</div>
+                        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue nisl sed suscipit suscipit. Aliquam erat volutpat. Integer ullamcorper vehicula sapien, ac laoreet nisl tincidunt at. Duis volutpat nibh sem, nec mollis nunc imperdiet vel.</div>
+                    </div>
+                </div>
+                <img src="images/test-d.jpeg">
+            </div>
+        </div>
+        <div class="info left bg-color-white text-color-white">
+            <div class="container">
+                <div class="content">
+                    <div class="bg-color-primary">
+                        <div class="subtitle">join our team.</div>
+                        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue nisl sed suscipit suscipit. Aliquam erat volutpat. Integer ullamcorper vehicula sapien, ac laoreet nisl tincidunt at. Duis volutpat nibh sem, nec mollis nunc imperdiet vel.</div>
+                    </div>
+                </div>
+                <img src="images/test-d.jpeg">
+                <div style="clear: both"></div>
+            </div>
+        </div>
         <div class="section-banner"></div>
         <div id="photo-highlights" class="container-fluid">
             <div class="row">
