--- a/index.html
+++ b/index.html
@@ -21,20 +21,19 @@
         <div class="section-banner"></div>
         <div id="latest-flavors"></div>
         <div class="section-banner"></div>
-        <div class="right-info">
+        <div class="info right bg-color-primary">
             <div class="container">
-                <div class="row">
-                    <div class="col">
-                        <img src="images/test-d.jpeg">
-                    </div>
-                    <div class="col">
-                        <div class="info">
-                            <div class="title">energized by green tea.<br />powered by purpose.</div>
-                            <div class="description">non-gmo ingredients combined with striking natural flavors make for a quality product we can stand behind 100%.</div>
+                <div class="content">
+                    <div class="bg-color-white">
+                        <div class="subtitle text-color-primary">
+                            energized by green tea.
+                            <br />
+                            powered by purpose.
                         </div>
+                        <div class="description text-color-primary">non-gmo ingredients combined with striking natural flavors make for a quality product we can stand behind 100%.</div>
                     </div>
-                    <div class="clear"></div>
                 </div>
+                <img src="images/test-d.jpeg">
             </div>
         </div>
         <div class="section-banner"></div>
