--- a/about.html
+++ b/about.html
@@ -14,7 +14,31 @@
         <link rel="stylesheet" href="css/about.css">
     </head>
     <body>
-        <div id="navbar"></div>
+        <div id="navbar" class="bg-color-secondary">
+            <div class="container">
+                <div class="links">
+                    <div>
+                        <a class="text-color-white" href="">beverages</a>
+                    </div>
+                    <div>
+                        <a class="text-color-white" href="">merch</a>
+                    </div>
+                </div>
+                <div class="center">
+                    <a href="index.html">
+                        <img src="images/logo.png">
+                    </a>
+                </div>
+                <div class="links">
+                    <div>
+                        <a class="text-color-white" href="about.html">about</a>
+                    </div>
+                    <div>
+                        <a class="text-color-white" href="contact.html">contact</a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div id="jumbotron"></div>
         <div class="info right bg-color-primary text-color-primary">
             <div class="container">
