[M3] Design jumbotron section for About and Contact pages

--- a/about.html
+++ b/about.html
@@ -39,7 +39,14 @@
                 </div>
             </div>
         </div>
-        <div id="jumbotron"></div>
+        <div id="jumbotron">
+            <div class="container">
+                <div class="text">
+                    <div class="title text-color-primary">about us.</div>
+                </div>
+                <img src="images/test-f.png">
+            </div>
+        </div>
         <div class="info right bg-color-primary text-color-primary">
             <div class="container">
                 <div class="content">
