--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,14 @@
                 </div>
             </div>
         </div>
-        <div id="jumbotron"></div>
+        <div id="jumbotron">
+            <div class="container">
+                <img src="images/test-e.png">
+                <div class="text">
+                    <div class="title text-color-primary">contact us.</div>
+                </div>
+            </div>
+        </div>
         <div id="contact-form"></div>
         <div class="section-banner"></div>
         <div id="photo-highlights" class="container-fluid">
