--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div id="jumbotron" class="bg-color-primary">
             <div class="container">
-                <div class="left">
+                <div class="text">
                     <div class="title text-color-white">
                         low sugar.
                         <br />
@@ -50,7 +50,7 @@
                         all natural.
                     </div>
                 </div>
-                <div class="right">
+                <div class="image">
                     <img src="images/two-cans.png">
                 </div>
             </div>
