--- a/index.html
+++ b/index.html
@@ -56,7 +56,26 @@
             </div>
         </div>
         <div class="section-banner"></div>
-        <div id="latest-flavors"></div>
+        <div id="latest-flavors" class="bg-color-white">
+            <img class="left" src="images/test-e.png">
+            <img class="right" src="images/test-f.png">
+            <div class="container">
+                <div class="text-color-primary">
+                    <div class="icons">
+                        <img src="images/icon-1.png">
+                        <img src="images/icon-2.png">
+                        <img src="images/icon-3.png">
+                    </div>
+                    <div class="subtitle">now available!</div>
+                    <div class="description">
+                        try our blueberry basil and
+                        <br />
+                        lemon ginger beverages today
+                    </div>
+                    <div class="button"></div>
+                </div>
+            </div>
+        </div>
         <div class="section-banner"></div>
         <div class="info right bg-color-primary">
             <div class="container">
@@ -68,6 +87,7 @@
                             powered by purpose.
                         </div>
                         <div class="description text-color-primary">non-gmo ingredients combined with striking natural flavors make for a quality product we can stand behind 100%.</div>
+                        <div class="button"></div>
                     </div>
                 </div>
                 <img src="images/test-d.jpeg">
