--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,52 @@
                 </div>
             </div>
         </div>
-        <div id="contact-form"></div>
+        <div id="contact-form" class="bg-color-primary">
+            <div class="inner bg-color-white">
+                <div class="subtitle text-color-primary">contact us.</div>
+                <div class="description text-color-primary">
+                    ???
+                    <br />
+                    ???
+                </div>
+                <form action="https://formspree.io/test@dotslashdigital.com" method="POST">
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            <label class="text-color-primary">full name *</label>
+                            <input type="text" class="form-control" name="Full Name" placeholder="">
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <label class="text-color-primary">phone number</label>
+                            <input type="tel" class="form-control" name="Phone Number" placeholder="">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            <label class="text-color-primary">email address *</label>
+                            <input type="email" class="form-control" name="_replyto" placeholder="">
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <label class="text-color-primary">subject</label>
+                            <select type="text" class="custom-select form-control text-color-primary" name="Subject" placeholder="">
+                                <option selected value="choose one...">choose one...</option>
+                                <option value="option a">option a</option>
+                                <option value="option b">option b</option>
+                                <option value="option c">option c</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label class="text-color-primary">how'd you hear about us?</label>
+                        <input type="text" class="form-control" name="How'd You Hear About Us?" placeholder="">
+                    </div>
+                    <div class="mb-3">
+                        <label class="text-color-primary">message *</label>
+                        <textarea class="form-control" rows="5" name="Message"></textarea>
+                    </div>
+                    <div class="button"></div>
+                </form>
+            </div>
+        </div>
         <div class="section-banner"></div>
         <div id="photo-highlights" class="container-fluid">
             <div class="row">
