[M3] Design Section Banners

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
                 </div>
             </div>
         </div>
-        <div class="section-banner"></div>
+        <div class="section-banner bg-color-secondary">
+            <div class="text-color-white subtitle">be better. be mindful.</div>
+        </div>
         <div id="latest-flavors" class="bg-color-white">
             <img class="left" src="images/test-e.png">
             <img class="right" src="images/test-f.png">
@@ -76,7 +78,9 @@
                 </div>
             </div>
         </div>
-        <div class="section-banner"></div>
+        <div class="section-banner bg-color-secondary">
+            <div class="text-color-white subtitle">be aware. be focused.</div>
+        </div>
         <div class="info right bg-color-primary">
             <div class="container">
                 <div class="content">
@@ -93,7 +97,9 @@
                 <img src="images/test-d.jpeg">
             </div>
         </div>
-        <div class="section-banner"></div>
+        <div class="section-banner bg-color-secondary">
+            <div class="text-color-white subtitle">we can all be better.</div>
+        </div>
         <div id="merch" class="bg-color-white">
             <img src="images/merch.png">
             <div class="container">
@@ -105,7 +111,9 @@
                 <div style="clear: both"></div>
             </div>
         </div>
-        <div class="section-banner"></div>
+        <div class="section-banner bg-color-secondary">
+            <div class="text-color-white subtitle">share your story: #bemindful</div>
+        </div>
         <div id="photo-highlights" class="container-fluid">
             <div class="row">
                 <div class="col"></div>
