--- a/about.html
+++ b/about.html
@@ -94,7 +94,9 @@
                 <div style="clear: both"></div>
             </div>
         </div>
-        <div class="section-banner"></div>
+        <div class="section-banner bg-color-secondary">
+            <div class="text-color-white subtitle">@bemindfulbeverages #bebetter</div>
+        </div>
         <div id="photo-highlights" class="container-fluid">
             <div class="row">
                 <div class="col"></div>
