--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,9 @@
                 </form>
             </div>
         </div>
-        <div class="section-banner"></div>
+        <div class="section-banner bg-color-secondary">
+            <div class="text-color-white subtitle">@bemindfulbeverages #wecanallbebetter</div>
+        </div>
         <div id="photo-highlights" class="container-fluid">
             <div class="row">
                 <div class="col"></div>
