[M3] Changed all pages to white/gray color scheme

--- a/contact.html
+++ b/contact.html
@@ -20,14 +20,14 @@
         <link rel="stylesheet" href="css/contact.css">
     </head>
     <body>
-        <div id="navbar" class="bg-color-secondary">
+        <div id="navbar" class="bg-color-primary">
             <div class="container">
                 <div class="links">
                     <div>
-                        <a class="description text-color-white" href="">beverages</a>
+                        <a class="description text-color-primary" href="">beverages</a>
                     </div>
                     <div>
-                        <a class="description text-color-white" href="">merch</a>
+                        <a class="description text-color-primary" href="">merch</a>
                     </div>
                 </div>
                 <div class="center">
@@ -37,15 +37,15 @@
                 </div>
                 <div class="links">
                     <div>
-                        <a class="description text-color-white" href="about.html">about</a>
+                        <a class="description text-color-primary" href="about.html">about</a>
                     </div>
                     <div>
-                        <a class="description text-color-white" href="contact.html">contact</a>
+                        <a class="description text-color-primary" href="contact.html">contact</a>
                     </div>
                 </div>
             </div>
         </div>
-        <div id="jumbotron">
+        <div id="jumbotron" class="bg-color-primary">
             <div class="container">
                 <img src="images/test-e.png">
                 <div class="text">
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div id="contact-form" class="bg-color-primary">
-            <div class="inner bg-color-white">
+            <div class="inner bg-color-primary">
                 <div class="title text-color-primary">contact us.</div>
                 <div class="description text-color-primary">
                     ???
@@ -99,8 +99,8 @@
                 </form>
             </div>
         </div>
-        <div class="section-banner bg-color-secondary">
-            <div class="text-color-white title">@bemindfulbeverages #wecanallbebetter</div>
+        <div class="section-banner bg-color-primary">
+            <div class="text-color-primary title">@bemindfulbeverages #wecanallbebetter</div>
         </div>
         <div id="photo-highlights" class="container-fluid">
             <div class="row">
@@ -109,14 +109,14 @@
                 <div class="col"></div>
             </div>
         </div>
-        <div id="footer" class="bg-color-secondary">
+        <div id="footer" class="bg-color-primary">
             <div class="container text-color-white">
                 <div class="links">
                     <div>
-                        <a class="description text-color-white" href="">press</a>
+                        <a class="description text-color-primary" href="">press</a>
                     </div>
                     <div>
-                        <a class="description text-color-white" href="">careers</a>
+                        <a class="description text-color-primary" href="">careers</a>
                     </div>
                 </div>
                 <div class="input">
@@ -124,7 +124,7 @@
                         Sign up for news, offers, and more
                     </div>
                     <div class="caption input-group">
-                        <input type="text" class="form-control bg-color-secondary text-color-white" placeholder="your email">
+                        <input type="text" class="form-control bg-color-primary text-color-primary" placeholder="your email">
                         <div class="input-group-append">
                             <button class="btn btn-outline-secondary" type="button">button</button>
                         </div>
@@ -132,13 +132,13 @@
                 </div>
                 <div class="social-media">
                     <a href="">
-                        <i class="fab fa-instagram text-color-white"></i>
+                        <i class="fab fa-instagram text-color-primary"></i>
                     </a>
                     <a href="">
-                        <i class="fab fa-facebook-f text-color-white"></i>
+                        <i class="fab fa-facebook-f text-color-primary"></i>
                     </a>
                     <a href="">
-                        <i class="fab fa-twitter text-color-white"></i>
+                        <i class="fab fa-twitter text-color-primary"></i>
                     </a>
                 </div>
             </div>
