--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
-        <div id="navbar" class="bg-color-secondary">
+        <div id="navbar" class="bg-color-primary">
             <div class="container">
                 <div class="links">
                     <div>
-                        <a class="description text-color-white" href="">beverages</a>
+                        <a class="description text-color-primary" href="">beverages</a>
                     </div>
                     <div>
-                        <a class="description text-color-white" href="">merch</a>
+                        <a class="description text-color-primary" href="">merch</a>
                     </div>
                 </div>
                 <div class="center">
@@ -37,10 +37,10 @@
                 </div>
                 <div class="links">
                     <div>
-                        <a class="description text-color-white" href="about.html">about</a>
+                        <a class="description text-color-primary" href="about.html">about</a>
                     </div>
                     <div>
-                        <a class="description text-color-white" href="contact.html">contact</a>
+                        <a class="description text-color-primary" href="contact.html">contact</a>
                     </div>
                 </div>
             </div>
@@ -55,16 +55,17 @@
                         <br />
                         all natural.
                     </div>
+                    <div id="bg-gradient"></div>
                 </div>
                 <div class="image">
                     <img src="images/two-cans.png">
                 </div>
             </div>
         </div>
-        <div class="section-banner bg-color-secondary">
-            <div class="text-color-white title">be better. be mindful.</div>
+        <div class="section-banner bg-color-primary">
+            <div class="text-color-primary title">be better. be mindful.</div>
         </div>
-        <div id="latest-flavors" class="bg-color-white">
+        <div id="latest-flavors" class="bg-color-primary">
             <img class="left" src="images/test-e.png">
             <img class="right" src="images/test-f.png">
             <div class="container">
@@ -84,13 +85,13 @@
                 </div>
             </div>
         </div>
-        <div class="section-banner bg-color-secondary">
-            <div class="text-color-white title">be aware. be focused.</div>
+        <div class="section-banner bg-color-primary">
+            <div class="text-color-primary title">be aware. be focused.</div>
         </div>
         <div class="info right bg-color-primary">
             <div class="container">
                 <div class="content">
-                    <div class="bg-color-white">
+                    <div class="bg-color-primary">
                         <div class="title text-color-primary">
                             energi<span class="z-no-line">z</span>ed by green tea.
                             <br />
@@ -103,10 +104,10 @@
                 <img src="images/test-d.jpeg">
             </div>
         </div>
-        <div class="section-banner bg-color-secondary">
-            <div class="text-color-white title">we can all be better.</div>
+        <div class="section-banner bg-color-primary">
+            <div class="text-color-primary title">we can all be better.</div>
         </div>
-        <div id="merch" class="bg-color-white">
+        <div id="merch" class="bg-color-primary">
             <img src="images/merch.png">
             <div class="container">
                 <div>
@@ -117,8 +118,8 @@
                 <div style="clear: both"></div>
             </div>
         </div>
-        <div class="section-banner bg-color-secondary">
-            <div class="text-color-white title">share your story: #bemindful</div>
+        <div class="section-banner bg-color-primary">
+            <div class="text-color-primary title">share your story: #bemindful</div>
         </div>
         <div id="photo-highlights" class="container-fluid">
             <div class="row">
@@ -127,14 +128,14 @@
                 <div class="col"></div>
             </div>
         </div>
-        <div id="footer" class="bg-color-secondary">
-            <div class="container text-color-white">
+        <div id="footer" class="bg-color-primary">
+            <div class="container text-color-primary">
                 <div class="links">
                     <div>
-                        <a class="description text-color-white" href="">press</a>
+                        <a class="description text-color-primary" href="">press</a>
                     </div>
                     <div>
-                        <a class="description text-color-white" href="">careers</a>
+                        <a class="description text-color-primary" href="">careers</a>
                     </div>
                 </div>
                 <div class="input">
@@ -142,7 +143,7 @@
                         Sign up for news, offers, and more
                     </div>
                     <div class="caption input-group">
-                        <input type="text" class="form-control bg-color-secondary text-color-white" placeholder="your email">
+                        <input type="text" class="form-control bg-color-primary text-color-primary" placeholder="your email">
                         <div class="input-group-append">
                             <button class="btn btn-outline-secondary" type="button">button</button>
                         </div>
@@ -150,13 +151,13 @@
                 </div>
                 <div class="social-media">
                     <a href="">
-                        <i class="fab fa-instagram text-color-white"></i>
+                        <i class="fab fa-instagram text-color-primary"></i>
                     </a>
                     <a href="">
-                        <i class="fab fa-facebook-f text-color-white"></i>
+                        <i class="fab fa-facebook-f text-color-primary"></i>
                     </a>
                     <a href="">
-                        <i class="fab fa-twitter text-color-white"></i>
+                        <i class="fab fa-twitter text-color-primary"></i>
                     </a>
                 </div>
             </div>
