--- a/about.html
+++ b/about.html
@@ -20,14 +20,14 @@
         <link rel="stylesheet" href="css/about.css">
     </head>
     <body>
-        <div id="navbar" class="bg-color-secondary">
+        <div id="navbar" class="bg-color-primary">
             <div class="container">
                 <div class="links">
                     <div>
-                        <a class="description text-color-white" href="">beverages</a>
+                        <a class="description text-color-primary" href="">beverages</a>
                     </div>
                     <div>
-                        <a class="description text-color-white" href="">merch</a>
+                        <a class="description text-color-primary" href="">merch</a>
                     </div>
                 </div>
                 <div class="center">
@@ -37,15 +37,15 @@
                 </div>
                 <div class="links">
                     <div>
-                        <a class="description text-color-white" href="about.html">about</a>
+                        <a class="description text-color-primary" href="about.html">about</a>
                     </div>
                     <div>
-                        <a class="description text-color-white" href="contact.html">contact</a>
+                        <a class="description text-color-primary" href="contact.html">contact</a>
                     </div>
                 </div>
             </div>
         </div>
-        <div id="jumbotron">
+        <div id="jumbotron" class="bg-color-primary">
             <div class="container">
                 <div class="text">
                     <div class="display text-color-primary">about us.</div>
@@ -56,7 +56,7 @@
         <div class="info right bg-color-primary text-color-primary">
             <div class="container">
                 <div class="content">
-                    <div class="bg-color-white">
+                    <div class="bg-color-primary">
                         <div class="title">our story.</div>
                         <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue nisl sed suscipit suscipit. Aliquam erat volutpat. Integer ullamcorper vehicula sapien, ac laoreet nisl tincidunt at. Duis volutpat nibh sem, nec mollis nunc imperdiet vel.</div>
                     </div>
@@ -64,7 +64,7 @@
                 <img src="images/test-d.jpeg">
             </div>
         </div>
-        <div class="info left bg-color-white text-color-white">
+        <div class="info left bg-color-primary text-color-primary">
             <div class="container">
                 <div class="content">
                     <div class="bg-color-primary">
@@ -79,7 +79,7 @@
         <div class="info right bg-color-primary text-color-primary">
             <div class="container">
                 <div class="content">
-                    <div class="bg-color-white">
+                    <div class="bg-color-primary">
                         <div class="title">???</div>
                         <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue nisl sed suscipit suscipit. Aliquam erat volutpat. Integer ullamcorper vehicula sapien, ac laoreet nisl tincidunt at. Duis volutpat nibh sem, nec mollis nunc imperdiet vel.</div>
                     </div>
@@ -87,7 +87,7 @@
                 <img src="images/test-d.jpeg">
             </div>
         </div>
-        <div class="info left bg-color-white text-color-white">
+        <div class="info left bg-color-primary text-color-primary">
             <div class="container">
                 <div class="content">
                     <div class="bg-color-primary">
@@ -100,8 +100,8 @@
                 <div style="clear: both"></div>
             </div>
         </div>
-        <div class="section-banner bg-color-secondary">
-            <div class="text-color-white title">@bemindfulbeverages #bebetter</div>
+        <div class="section-banner bg-color-primary">
+            <div class="text-color-primary title">@bemindfulbeverages #bebetter</div>
         </div>
         <div id="photo-highlights" class="container-fluid">
             <div class="row">
@@ -110,14 +110,14 @@
                 <div class="col"></div>
             </div>
         </div>
-        <div id="footer" class="bg-color-secondary">
-            <div class="container text-color-white">
+        <div id="footer" class="bg-color-primary">
+            <div class="container text-color-primary">
                 <div class="links">
                     <div>
-                        <a class="description text-color-white" href="">press</a>
+                        <a class="description text-color-primary" href="">press</a>
                     </div>
                     <div>
-                        <a class="description text-color-white" href="">careers</a>
+                        <a class="description text-color-primary" href="">careers</a>
                     </div>
                 </div>
                 <div class="input">
@@ -125,7 +125,7 @@
                         Sign up for news, offers, and more
                     </div>
                     <div class="caption input-group">
-                        <input type="text" class="form-control bg-color-secondary text-color-white" placeholder="your email">
+                        <input type="text" class="form-control bg-color-primary text-color-primary" placeholder="your email">
                         <div class="input-group-append">
                             <button class="btn btn-outline-secondary" type="button">button</button>
                         </div>
@@ -133,13 +133,13 @@
                 </div>
                 <div class="social-media">
                     <a href="">
-                        <i class="fab fa-instagram text-color-white"></i>
+                        <i class="fab fa-instagram text-color-primary"></i>
                     </a>
                     <a href="">
-                        <i class="fab fa-facebook-f text-color-white"></i>
+                        <i class="fab fa-facebook-f text-color-primary"></i>
                     </a>
                     <a href="">
-                        <i class="fab fa-twitter text-color-white"></i>
+                        <i class="fab fa-twitter text-color-primary"></i>
                     </a>
                 </div>
             </div>
