[M3] Design buttons on all pages

--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
                     <div class="bg-color-primary">
                         <div class="title">join our team.</div>
                         <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue nisl sed suscipit suscipit. Aliquam erat volutpat. Integer ullamcorper vehicula sapien, ac laoreet nisl tincidunt at. Duis volutpat nibh sem, nec mollis nunc imperdiet vel.</div>
-                        <div class="button"></div>
+                        <div class="button">careers page</div>
                     </div>
                 </div>
                 <img src="images/test-d.jpeg">
@@ -127,7 +127,9 @@
                     <div class="caption input-group">
                         <input type="text" class="form-control bg-color-primary text-color-primary" placeholder="your email">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-secondary" type="button">button</button>
+                            <button class="btn btn-outline-secondary" type="button">
+                                <i class="fas fa-arrow-right"></i>
+                            </button>
                         </div>
                     </div>
                 </div>
