--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
                         <label class="caption text-color-primary">message *</label>
                         <textarea class="form-control caption" rows="5" name="Message"></textarea>
                     </div>
-                    <div class="button"></div>
+                    <div class="button">send</div>
                 </form>
             </div>
         </div>
@@ -110,7 +110,7 @@
             </div>
         </div>
         <div id="footer" class="bg-color-primary">
-            <div class="container text-color-white">
+            <div class="container text-color-primary">
                 <div class="links">
                     <div>
                         <a class="description text-color-primary" href="">press</a>
@@ -126,7 +126,9 @@
                     <div class="caption input-group">
                         <input type="text" class="form-control bg-color-primary text-color-primary" placeholder="your email">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-secondary" type="button">button</button>
+                            <button class="btn btn-outline-secondary" type="button">
+                                <i class="fas fa-arrow-right"></i>
+                            </button>
                         </div>
                     </div>
                 </div>
