--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <br />
                         lemon ginger beverages today
                     </div>
-                    <div class="button"></div>
+                    <div class="button">buy now</div>
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
                             powered by purpose.
                         </div>
                         <div class="description text-color-primary">non-gmo ingredients combined with striking natural flavors make for a quality product we can stand behind 100%.</div>
-                        <div class="button"></div>
+                        <div class="button">learn more</div>
                     </div>
                 </div>
                 <img src="images/test-d.jpeg">
@@ -112,7 +112,9 @@
             <div class="container">
                 <div>
                     <div class="display text-color-primary">represent the mindful mindset.</div>
-                    <div class="button"></div>
+                    <a href="">
+                        <div class="button">shop merch</div>
+                    </a>
                     <div style="clear: both"></div>
                 </div>
                 <div style="clear: both"></div>
@@ -145,7 +147,9 @@
                     <div class="caption input-group">
                         <input type="text" class="form-control bg-color-primary text-color-primary" placeholder="your email">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-secondary" type="button">button</button>
+                            <button class="btn btn-outline-secondary" type="button">
+                                <i class="fas fa-arrow-right"></i>
+                            </button>
                         </div>
                     </div>
                 </div>
