[M5] Design Active and Hover States for Buttons

--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                         <br />
                         lemon ginger beverages today
                     </div>
-                    <div class="button">buy now</div>
+                        <a href="" class="button">buy now</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -98,7 +99,7 @@
                             powered by purpose.
                         </div>
                         <div class="description text-color-primary">non-gmo ingredients combined with striking natural flavors make for a quality product we can stand behind 100%.</div>
-                        <div class="button">learn more</div>
+                        <a href="" class="button">learn more</a>
                     </div>
                 </div>
                 <img src="images/test-d.jpeg">
@@ -112,9 +113,7 @@
             <div class="container">
                 <div>
                     <div class="display text-color-primary">represent the mindful mindset.</div>
-                    <a href="">
-                        <div class="button">shop merch</div>
-                    </a>
+                    <a href="" class="button">shop merch</a>
                     <div style="clear: both"></div>
                 </div>
                 <div style="clear: both"></div>
