--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
                     <div class="bg-color-primary">
                         <div class="title">join our team.</div>
                         <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue nisl sed suscipit suscipit. Aliquam erat volutpat. Integer ullamcorper vehicula sapien, ac laoreet nisl tincidunt at. Duis volutpat nibh sem, nec mollis nunc imperdiet vel.</div>
-                        <div class="button">careers page</div>
+                        <a href="" class="button">careers page</a>
                     </div>
                 </div>
                 <img src="images/test-d.jpeg">
