--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
                         <label class="caption text-color-primary">message *</label>
                         <textarea class="form-control caption" rows="5" name="Message"></textarea>
                     </div>
-                    <div class="button">send</div>
+                    <a href="" class="button">send</a>
                 </form>
             </div>
         </div>
