Fixed the send button for the contact form

--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
                         <label class="caption text-color-primary">message *</label>
                         <textarea class="form-control caption" rows="5" name="Message"></textarea>
                     </div>
-                    <a href="" class="button">send</a>
+                    <input type="submit" class="button" value="send">
                 </form>
             </div>
         </div>
