--- a/contact.html
+++ b/contact.html
@@ -24,10 +24,10 @@
             <div class="container">
                 <div class="links">
                     <div>
-                        <a class="description text-color-primary" href="">beverages</a>
+                        <a class="description text-color-primary underline" href="">beverages</a>
                     </div>
                     <div>
-                        <a class="description text-color-primary" href="">merch</a>
+                        <a class="description text-color-primary underline" href="">merch</a>
                     </div>
                 </div>
                 <div class="center">
@@ -37,10 +37,10 @@
                 </div>
                 <div class="links">
                     <div>
-                        <a class="description text-color-primary" href="about.html">about</a>
+                        <a class="description text-color-primary underline" href="about.html">about</a>
                     </div>
                     <div>
-                        <a class="description text-color-primary" href="contact.html">contact</a>
+                        <a class="description text-color-primary underline" href="contact.html">contact</a>
                     </div>
                 </div>
             </div>
@@ -113,10 +113,10 @@
             <div class="container text-color-primary">
                 <div class="links">
                     <div>
-                        <a class="description text-color-primary" href="">press</a>
+                        <a class="description text-color-primary underline" href="">press</a>
                     </div>
                     <div>
-                        <a class="description text-color-primary" href="">careers</a>
+                        <a class="description text-color-primary underline" href="">careers</a>
                     </div>
                 </div>
                 <div class="input">
