[M4] Added text content for contact form dropdown on Contact page

--- a/contact.html
+++ b/contact.html
@@ -81,9 +81,12 @@
                             <label class="caption text-color-primary">subject</label>
                             <select type="text" class="custom-select form-control caption text-color-primary" name="Subject" placeholder="">
                                 <option selected value="choose one...">choose one...</option>
-                                <option value="option a">option a</option>
-                                <option value="option b">option b</option>
-                                <option value="option c">option c</option>
+                                <option value="Product Feedback">product feedback</option>
+                                <option value="Wholesale Inquiry">wholesale inquiry</option>
+                                <option value="Event Inquiry">event inquiry</option>
+                                <option value="Media/Press Inquiry">media/press inquiry</option>
+                                <option value="General Question">general question</option>
+                                <option value="Other">other</option>
                             </select>
                         </div>
                     </div>
